raffia/tests/error/value/url/whitespace.snap
---
source: raffia/tests/error.rs
---
error: invalid URL
  ┌─ whitespace.css:2:19
  │
2 │   background: url(a b);
  │                   ^


